Settings: Incall vibration options [3/3]
* Allow setting vibration when call is connected
* Allow setting vibration when call is disconnected
* Allow setting vibration for call waiting

Change-Id: I40e2d73c815d0cb534e9c4c0829a7748cd6d8585
Co-Authored-By: beanstown106 <nbenis106@gmail.com>
Co-Authored-By: Erfan Abdi <erfangplus@gmail.com>
Co-Authored-By: nift4 <nift4@protonmail.com>
Signed-off-by: Mohammad Hasan Keramat J <ikeramat@protonmail.com>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

Change-Id: I8f797407e1cf843df7e3aa3ff33576ef5b63a79a

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -4800,4 +4800,10 @@
     <string name="contrast_medium" msgid="384414510709285811">"Mittel"</string>
     <string name="contrast_high" msgid="3988567609694797696">"Hoch"</string>
     <string name="dock_multi_instances_not_supported_text" msgid="3513493664467667084">"Diese App kann nur in einem einzigen Fenster geöffnet werden"</string>
+
+    <!-- Incall vibrate options -->
+    <string name="incall_vibration_category">Einst. für Vibration während Telefonaten</string>
+    <string name="incall_vibrate_connect_title">Bei hergestellter Verbindung vibrieren</string>
+    <string name="incall_vibrate_call_wait_title">Bei Anklopfen vibrieren</string>
+    <string name="incall_vibrate_disconnect_title">Beim Trennen der Verbindung vibrieren</string>
 </resources>
